--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Awesome Website</title>
+    <title>STETIM</title>
 
     <!-- attach our stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <!-- the header -->
-    <header>
+<!-- the header -->
+<header>
 
-        <!-- our main logo -->
-        <a id="logo" href="index.html">
-            <img src="img/avatar.jpeg" alt="Logo">
-            <span>My Website</span>
-        </a>
+    <!-- our main logo -->
+    <a id="logo" href="index.html">
+        <img src="img/logo.png" alt="Logo">
+    </a>
 
-        <!-- main navigation links -->
-        <nav>
-            <ul>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sign Up</a></li>
-            </ul>
-        </nav>
+    <!-- main navigation links -->
 
-    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Video's</a></li>
+            <li><a href="#">Forum</a></li>
+            <li><a href="#">Over ons</a></li>
+            <li><a href="#">Log in</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <!-- the content -->
-    <main>
 
-        <!-- hero content -->
-        <div class="hero">
-            <!-- content for the hero -->
-            <div class="hero-content">
-                <h1 class="hero-title">Here is Title</h1>
-                <p>The best and most comprehensive website ever.</p>
+<!-- the content -->
 
-                <a href="#">Learn More</a>
-                <a href="#">Sign Up</a>
-            </div>
+<main>
+
+    <div class="hero">
+        <!-- content for the hero -->
+
+        <div class="hero-content">
+            <h1 class="hero-title">STETIM</h1>
+            <p> De BMW Specialist</p>
+
+            <a href="#">Over ons</a>
+            <a href="#">Login</a>
         </div>
+    </div>
 
-        <!-- features section -->
-        <div class="site-section">
+
+    <iframe width="640" height="352" src="https://www.youtube.com/watch?v=fEEifLf5JDM" frameborder="0" allowfullscreen=""></iframe>
+
+
+    <!-- features section -->
+
+    <div class="site-section">
         <div class="site-section-inside">
-
             <div class="section-header">
                 <h2>Key Features</h2>
             </div>
-
             <div class="feature-box">
                 <img src="img/like.png" alt="Easy to Use">
                 <h5>Easy to Use</h5>
@@ -65,27 +68,31 @@
                 <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
             </div>
 
+
             <div class="feature-box">
                 <img src="img/heart.png" alt="Fun to Use">
-                <h5>You'll Love It</h5>
+                <h5>You'll Love</h5>
                 <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
             </div>
-
         </div>
-        </div>
+    </div>
 
-        <!-- testimonials section -->
-        <div class="site-section site-section-secondary">
+
+    <!-- testimonials section -->
+
+    <div class="site-section site-section-secondary">
         <div class="site-section-inside">
-
             <div class="section-header">
                 <h2>What the people say</h2>
             </div>
 
+
             <div class="testimonial-box">
                 <div class="testimonial-content">
                     Their service is by far the most influential I've ever seen.
+
                 </div>
+
                 <div class="testimonial-author">
                     <img src="img/david.jpg" alt="David East">
                     <h5>David East</h5>
@@ -104,6 +111,7 @@
                 </div>
             </div>
 
+
             <div class="testimonial-box">
                 <div class="testimonial-content">
                     Their service is by far the most influential I've ever seen.
@@ -114,17 +122,24 @@
                     <span>King of Angular</span>
                 </div>
             </div>
-
         </div>
-        </div>
+    </div>
 
-    </main>
 
-    <!-- the footer -->
-    <footer>
-        <img src="img/avatar.jpeg" alt="Footer Logo">
-        <span>My Website<br>Copyright &copy; 2016-3010 </span>
-    </footer>
+</main>
+
+
+<!-- the footer -->
+
+<footer>
+
+    <img src="img/avatar.jpeg" alt="Footer Logo">
+
+    <span>My Website<br>Copyright &copy; 2016-3010 </span>
+
+</footer>
+
 
 </body>
+
 </html>
