--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>STETIM</title>
+    <title>Uw auto specialist</title>
 
-    <!-- attach our stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<!-- the header -->
 <header>
 
-    <!-- our main logo -->
     <a id="logo" href="index.html">
         <img src="img/logo.png" alt="Logo">
     </a>
-
-    <!-- main navigation links -->
+    
 
     <nav>
         <ul>
-            <li><a href="#">Video's</a></li>
-            <li><a href="#">Forum</a></li>
-            <li><a href="#">Over ons</a></li>
-            <li><a href="#">Log in</a></li>
+            <li> <a href="videos.html">
+                <button>Video's</button>
+            </a> </li>
+
+            <li> <a href="forum.html">
+                <button>Forum</button>
+            </a> </li>
+            <li> <a href="Overons.html">
+                <button>Over ons</button>
+            </a> </li>
+            <li><a href="login.html">
+                <button>Log in</button> </a></li>
         </ul>
     </nav>
 </header>
 
 
-<!-- the content -->
 
 <main>
 
-    <div class="hero">
-        <!-- content for the hero -->
+    <div class="hoofdpagina">
+        <div class="hoofdpagina-content">
+            <h1 class="hoofdpagina-title">STETIM</h1>
+            <p> Uw Auto Specialist</p>
 
-        <div class="hero-content">
-            <h1 class="hero-title">STETIM</h1>
-            <p> De BMW Specialist</p>
-
-            <a href="#">Over ons</a>
-            <a href="#">Login</a>
+            <a href="Overons.html">Over ons</a>
+            <a href="login.html">Login</a>
         </div>
     </div>
 
 
-    <iframe width="640" height="352" src="https://www.youtube.com/watch?v=fEEifLf5JDM" frameborder="0" allowfullscreen=""></iframe>
 
 
     <!-- features section -->
@@ -54,7 +54,7 @@
     <div class="site-section">
         <div class="site-section-inside">
             <div class="section-header">
-                <h2>Key Features</h2>
+                <h2>HOME</h2>
             </div>
             <div class="feature-box">
                 <img src="img/like.png" alt="Easy to Use">
@@ -76,6 +76,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!-- testimonials section -->
@@ -126,6 +127,19 @@
     </div>
 
 
+    <div class="site-section site-section-secondary">
+        <div class="site-section-inside">
+            <div class="section-header">
+                <h2> featured video's</h2>
+            </div>
+
+    <table class="featured-videos" cellspacing="20px" cellpadding="0px">
+        <tr>
+            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        </tr>
+    </table>
 </main>
 
 
