--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
-    <title>Uw auto specialist</title>
+    <meta charset="UTF-8">
+    <title>De auto specialist</title>
+
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -9,10 +11,12 @@
 
 <header>
 
+    <!-- our main logo -->
     <a id="logo" href="index.html">
-        <img src="img/logo.png" alt="Logo">
+        <img src="img/Logo.png" alt="Logo">
     </a>
-    
+
+    <!-- main navigation links -->
 
     <nav>
         <ul>
@@ -33,13 +37,16 @@
 </header>
 
 
+<!-- the content -->
 
 <main>
 
     <div class="hoofdpagina">
+        <!-- content for the hero -->
+
         <div class="hoofdpagina-content">
-            <h1 class="hoofdpagina-title">STETIM</h1>
-            <p> Uw Auto Specialist</p>
+            <h1 class="hoofdpagina-titel">STETIM</h1>
+            <p> De Auto Specialist</p>
 
             <a href="Overons.html">Over ons</a>
             <a href="login.html">Login</a>
