--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 
 <header>
+
     <a id="logo" href="index.html">
         <img src="img/Logo.png" alt="Logo">
     </a>
@@ -32,6 +32,29 @@
                 <button>Log in</button> </a></li>
         </ul>
     </nav>
+
+    <main>
+
+        <div class="loginpagina">
+            <div class="loginkader">
+                <h1>Log in</h1>
+                <form>
+                    <label for="username">Gebruikersnaam</label>
+                    <input type="text" placeholder="Voer gebruikersnaam in">
+                    <label for="password">Wachtwoord</label>
+                    <input type="password" placeholder="Voer wachtwoord in">
+                    <input type="submit" value="Log In">
+                    <a href="#">Wachtwoord vergeten?</a>
+                <br>
+                    <a href="#">Heeft u nog geen account?</a>
+                </form>
+            </div>
+
+
+
+        </div>
+
+    </main>
 
 </header>
 </body>
