--- a/login.html
+++ b/login.html
@@ -36,19 +36,21 @@
     <main>
 
         <div class="loginpagina">
-            <div class="loginkader">
-                <h1>Log in</h1>
-                <form>
-                    <label for="username">Gebruikersnaam</label>
-                    <input type="text" placeholder="Voer gebruikersnaam in">
-                    <label for="password">Wachtwoord</label>
-                    <input type="password" placeholder="Voer wachtwoord in">
-                    <input type="submit" value="Log In">
-                    <a href="#">Wachtwoord vergeten?</a>
-                <br>
-                    <a href="#">Heeft u nog geen account?</a>
-                </form>
-            </div>
+        <div class="login-box">
+        <img src="img/logologin.png" class="avatar" alt="Avatar Image">
+        <h1>Login</h1>
+        <form>
+            <!-- USERNAME INPUT -->
+            <label for="username">Gebruikersnaam</label>
+            <input type="text" placeholder="Voer gebruikersnaam in">
+            <!-- PASSWORD INPUT -->
+            <label for="password">Wachtwoord</label>
+            <input type="password" placeholder="Voer u wachtwoord in">
+            <input type="submit" value="Log In">
+            <a href="#">Wachtwoord vergeten?</a><br>
+            <a href="#">Heeft u nog geen account?</a>
+        </form>
+    </div>
 
 
 
