--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="home">
 
 <header>
     <a id="logo" href="index.html">
