--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="home">
+<body>
 
 <header>
     <a id="logo" href="index.html">
@@ -16,18 +16,19 @@
 
     <nav>
         <ul>
-            <li> <a href="videos.html">
-                <button>Video's</button>
-            </a> </li>
+            <li>
+                <a href="videos.html" >Video's</a>
+            </li>
 
-            <li> <a href="forum.html">
-                <button>Forum</button>
-            </a> </li>
-            <li> <a href="Overons.html">
-                <button>Over ons</button>
-            </a> </li>
-            <li><a href="login.html">
-                <button>Log in</button> </a></li>
+            <li>
+                <a href="forum.html" >Forum</a>
+            </li>
+            <li>
+                <a href="overons.html" >Over ons</a>
+            </li>
+            <li>
+                <a href="login.html" >Login</a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -131,13 +132,22 @@
                 <h2> featured video's</h2>
             </div>
 
-    <table class="featured-videos" cellspacing="20px" cellpadding="0px">
-        <tr>
-            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-            <td><iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWgcp7nVpyY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-        </tr>
-    </table>
+
+            <table class="videopagina">
+                <tr>
+                    <td> <iframe  width="360" height="200" src="https://www.youtube.com/embed/zWgcp7nVpyY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </td>
+                    <td> <iframe  width="360" height="200" src="https://www.youtube.com/embed/zWgcp7nVpyY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </td>
+                    <td> <iframe  width="360" height="200" src="https://www.youtube.com/embed/zWgcp7nVpyY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </td>
+                </tr>
+
+                <tr>
+                    <td>Uitgelichte video 1</td>
+                    <td>Uitgelichte Video 2</td>
+                    <td>Uitgelichte video 3</td>
+                </tr>
+            </table>
+
+
 </main>
 
 
