--- a/overons.html
+++ b/overons.html
@@ -17,50 +17,53 @@
 
     <nav>
         <ul>
-            <li> <a href="videos.html">
-                <button>Video's</button>
-            </a> </li>
+            <li>
+                <a href="videos.html" >Video's</a>
+            </li>
 
-            <li> <a href="forum.html">
-                <button>Forum</button>
-            </a> </li>
-            <li> <a href="overons.html">
-                <button>Over ons</button>
-            </a> </li>
-            <li><a href="login.html">
-                <button>Log in</button> </a></li>
+            <li>
+                <a href="forum.html" >Forum</a>
+            </li>
+            <li>
+                <a href="overons.html" >Over ons</a>
+            </li>
+            <li>
+                <a href="login.html" >Login</a>
+            </li>
+
+
         </ul>
     </nav>
 </header>
 
 <main>
-<div class="team-sectie">
-    <h1>Ons team</h1>
-    <span class="border"></span>
-   <div class="ps">
-     <a href="#p1"><img src="img/p1.jpg"></a>
-     <a href="#p2"><img src="img/p2.jpg"></a>
-        <div>
-           <div class="sectie" id="p1">
-               <span class="naam">Tim van Grootveld</span>
-               <span class="border"></span>
-               <p>
-                  1. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
-                   proeftekst in deze bedrijfstak sinds de 16e eeuw
-               </p>
-           </div>
+    <div class="team-sectie">
+        <h1>Ons team</h1>
+        <span class="border"></span>
+        <div class="ps">
+            <a href="#p1"><img src="img/p1.jpg"></a>
+            <a href="#p2"><img src="img/p2.jpg"></a>
+            <div>
+                <div class="sectie" id="p1">
+                    <span class="naam">Tim van Grootveld</span>
+                    <span class="border"></span>
+                    <p>
+                        1. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
+                        proeftekst in deze bedrijfstak sinds de 16e eeuw
+                    </p>
+                </div>
 
-           <div class="sectie" id="p2">
-               <span class="naam">Steven Piedra Climent</span>
-               <span class="border"></span>
-               <p>
-                   2. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
-                   proeftekst in deze bedrijfstak sinds de 16e eeuw
-               </p>
-           </div>
+                <div class="sectie" id="p2">
+                    <span class="naam">Steven Piedra Climent</span>
+                    <span class="border"></span>
+                    <p>
+                        2. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
+                        proeftekst in deze bedrijfstak sinds de 16e eeuw
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </main>
 <footer>
     <img src="img/avatar.jpeg" alt="Footer Logo">
