--- a/forum.html
+++ b/forum.html
@@ -19,30 +19,33 @@
 
     <nav>
         <ul>
-            <li> <a href="videos.html">
-                <button>Video's</button>
-            </a> </li>
+            <li>
+                <a href="videos.html" >Video's</a>
+            </li>
 
-            <li> <a href="forum.html">
-                <button>Forum</button>
-            </a> </li>
-            <li> <a href="Overons.html">
-                <button>Over ons</button>
-            </a> </li>
-            <li><a href="login.html">
-                <button>Log in</button> </a></li>
+            <li>
+                <a href="forum.html" >Forum</a>
+            </li>
+            <li>
+                <a href="overons.html" >Over ons</a>
+            </li>
+            <li>
+                <a href="login.html" >Login</a>
+            </li>
         </ul>
     </nav>
+</header>
+
 
     <main>
-
         <div class="forumpagina">
 
-
+            <div class="forumpagina-content">
+                <h2 class="forumpagina-titel">FORUM</h2>
+                <p2> van de Auto Specialist</p2>
             </div>
         </div>
     </main>
 
-</header>
 </body>
 </html>
