--- a/login.html
+++ b/login.html
@@ -18,20 +18,23 @@
 
     <nav>
         <ul>
-            <li> <a href="videos.html">
-                <button>Video's</button>
-            </a> </li>
+            <li>
+                <a href="videos.html" >Video's</a>
+            </li>
 
-            <li> <a href="forum.html">
-                <button>Forum</button>
-            </a> </li>
-            <li> <a href="Overons.html">
-                <button>Over ons</button>
-            </a> </li>
-            <li><a href="login.html">
-                <button>Log in</button> </a></li>
+            <li>
+                <a href="forum.html" >Forum</a>
+            </li>
+            <li>
+                <a href="overons.html" >Over ons</a>
+            </li>
+            <li>
+                <a href="login.html" >Login</a>
+            </li>
         </ul>
     </nav>
+
+</header>
 
     <main>
 
@@ -40,13 +43,14 @@
         <img src="img/logologin.png" class="avatar" alt="Avatar Image">
         <h1>Login</h1>
         <form>
-            <!-- USERNAME INPUT -->
-            <label for="username">Gebruikersnaam</label>
-            <input type="text" placeholder="Voer gebruikersnaam in">
-            <!-- PASSWORD INPUT -->
-            <label for="password">Wachtwoord</label>
-            <input type="password" placeholder="Voer u wachtwoord in">
+
+            <label for="Gebruikersnaam">Gebruikersnaam</label>
+            <input type="text" placeholder="Voer gebruikersnaam in" id="Gebruikersnaam">
+
+            <label for="Wachtwoord">Wachtwoord</label>
+            <input type="password" placeholder="Voer u wachtwoord in" id="Wachtwoord">
             <input type="submit" value="Log In">
+
             <a href="#">Wachtwoord vergeten?</a><br>
             <a href="#">Heeft u nog geen account?</a>
         </form>
@@ -58,6 +62,5 @@
 
     </main>
 
-</header>
 </body>
 </html>
