--- a/forum.html
+++ b/forum.html
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Forum</title>
-
-    <!-- attach our stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
 <header>
-
     <a id="logo" href="index.html">
         <img src="img/Logo.png" alt="Logo">
     </a>
-
-
     <nav>
         <ul>
             <li>
                 <a href="videos.html" >Video's</a>
             </li>
-
             <li>
                 <a href="forum.html" >Forum</a>
             </li>
@@ -35,17 +27,75 @@
         </ul>
     </nav>
 </header>
-
-
     <main>
         <div class="forumpagina">
-
             <div class="forumpagina-content">
                 <h2 class="forumpagina-titel">FORUM</h2>
                 <p2> van de Auto Specialist</p2>
             </div>
+            <div>
+                <button class="forumlogin">Login</button>
+                <button class="nieuwetopic">Nieuwe topic</button>
+            </div>
+            <table class="forum">
+                <thead>
+                <tr>
+                    <th class="rij-1 plaatje"></th>
+                    <th class="rij-2 topic">Topic</th>
+                    <th class="rij-3 bekeken"></th>
+                    <th class="rij-3 laatstepost">Laatste post</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="punaise"></td>
+                    <td>Toyota LandCruiser voldoet aan nieuwe emissie-eisen</td>
+                    <td>633 views</td>
+                    <td>Door: PauL1993 <br> 1 maand geleden
+                    </td>
+                </tr>
+                <tr>
+                    <td class="punaise"></td>
+                    <td>Niels van Roij geeft masterclasses bij Louwman Exclusive</td>
+                    <td>712 views</td>
+                    <td>Door: SteVen1997 <br> 3 maanden geleden
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lijstafbeelding"></td>
+                    <td>Facelift geeft Suzuki Vitara meer scherpte</td>
+                    <td>5 views</td>
+                    <td>Door: TiM2000 <br> 1 uur geleden
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lijstafbeelding"></td>
+                    <td>Recordverkopen voor Renault-Nissan-Mitsubishi alliantie</td>
+                    <td>102 views</td>
+                    <td>Door: Jan1839 <br> 16 uur geleden
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lijstafbeelding"></td>
+                    <td>Tesla haalt productiedoelstelling met Model 3</td>
+                    <td>110 views</td>
+                    <td>Door: Joost1431 <br> 17 uur geleden
+                    </td>
+                </tr>
+                <tr>
+                    <td class="lijstafbeelding"></td>
+                    <td>Massale rijverboden in Parijs</td>
+                    <td>43 views</td>
+                    <td>Door: Piet4313<br> 4 uur geleden
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </main>
-
+<footer>
+    <img src="img/avatar.jpeg" alt="Footer Logo">
+    <span>My Website<br>Copyright &copy; 2016-3010 </span>
+</footer>
 </body>
 </html>
