--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
                     <span>Queen of Scotch</span>
                 </div>
             </div>
-
-
             <div class="testimonial-box">
                 <div class="testimonial-content">
                     Their service is by far the most influential I've ever seen.
@@ -124,8 +122,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="site-section site-section-secondary">
         <div class="site-section-inside">
             <div class="section-header">
@@ -147,18 +143,12 @@
                 </tr>
             </table>
 
-
+</div>
+    </div>
 </main>
-
-
-<!-- the footer -->
-
 <footer>
-
     <img src="img/avatar.jpeg" alt="Footer Logo">
-
     <span>My Website<br>Copyright &copy; 2016-3010 </span>
-
 </footer>
 
 
