--- a/overons.html
+++ b/overons.html
@@ -42,19 +42,21 @@
             <div>
                 <div class="sectie" id="p1">
                     <span class="naam">Tim van Grootveld</span>
-                    <span class="border"></span>
-                    <p>
-                        1. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
-                        proeftekst in deze bedrijfstak sinds de 16e eeuw
+                    <span class="tekstblok"></span>
+                    <p class="tekst">
+                        Ik ben Tim van Grootveld, 18 jaar en ik woon in Doetinchem. Studeer momenteel aan de HAN te Arnhem.
+                        Mijn favoriete hobby's om te doen zijn: photoshoppen, chillen met vrienden.
+                        Mijn passie ligt bij designen, Apple producten en sneakers.
                     </p>
                 </div>
 
                 <div class="sectie" id="p2">
                     <span class="naam">Steven Piedra Climent</span>
-                    <span class="border"></span>
-                    <p>
-                        2. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
-                        proeftekst in deze bedrijfstak sinds de 16e eeuw
+                    <span class="tekstblok"></span>
+                    <p class="tekst">
+                        Ik ben Steven Piedra Climent, 21 jaar en ik woon in Terborg. Mijn studie volg ik ook aan de HAN te Arnhem.
+                        Mijn favoriete hobby's om te doen zijn: sporten, gamen, chillen met vrienden.
+                        Mijn passie ligt bij gamen en sporten.
                     </p>
                 </div>
             </div>
